welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:27: error: value gauche is not a member of Unit
	growFlowers();avance(6)gauche();avance(2)droite();faireFleur(Color.BLUE);
                               ^FlowerCase:27: error: value droite is not a member of Unit
	growFlowers();avance(6)gauche();avance(2)droite();faireFleur(Color.BLUE);
                                                 ^